Cleanup of editing help menu. Plus some other things...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1608 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -17,7 +17,7 @@ bind A left
 bind S backward
 bind D right
 
-bind B "showmenu weapons"
+bind B [ if $editing [ delent ] [ showmenu weapons ] ]
 
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
