--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -52,7 +52,7 @@ keymap 96 BACKQUOTE "saycommand /"
 keymap 97 A ""
 keymap 98 B ""
 keymap 99 C "copy"
-keymap 100 D "delent"
+keymap 100 D ""
 keymap 101 E "edittoggle"
 keymap 102 F "solid 1"
 keymap 103 G "solid 0"
