--- a/ac/config/lights.cfg
+++ b/ac/config/lights.cfg
@@ -7,6 +7,8 @@
 
 newmenu "lighting"
 
+menuitem "Temporarily flood map with light" "fullbright 1"
+menuitem """"
 menuitem "White light"	[ showmenu "White light radius" ]
 menuitem "Red light"	[ showmenu "Red light radius" ]
 menuitem "Yellow light" [ showmenu "Yellow light radius" ]
@@ -14,7 +16,7 @@ menuitem "Green light"	[ showmenu "Green light radius" ]
 menuitem "Teal light"	[ showmenu "Teal light radius" ]
 menuitem "Blue light"	[ showmenu "Blue light radius" ]
 menuitem "Pink light"	[ showmenu "Pink light radius" ]
-menuitem ""
+menuitem """"
 menuitem "Custom light"	"saycommand /newent light "
 
 
