--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -4,15 +4,15 @@ bind ESCAPE "showmenu main"    // it all starts here
 
 newmenu main
 
-menuitem "Multiplayer"  	        "showmenu multiplayer"
-menuitem "Singleplayer"				"showmenu singleplayer"
-menuitem "Player Setup"				"showmenu setup"
-menuitem "Settings"                 "showmenu settings"
-menuitem "Demo"                     "showmenu demo"
-menuitem "Editing"        			"showmenu editing"
-menuitem "Help"						"showmenu help"
-menuitem "About"			        "showmenu about"
-menuitem "Quit"						"quit"
+menuitem "Multiplayer"			"showmenu multiplayer"
+menuitem "Singleplayer"			"showmenu singleplayer"
+menuitem "Player Setup"			"showmenu setup"
+menuitem "Settings"			"showmenu settings"
+menuitem "Demo"				"showmenu demo"
+menuitem "Editing" 			"showmenu editing"
+menuitem "Help"				"showmenu help"
+menuitem "About"			"showmenu about"
+menuitem "Quit"				"quit"
 
 // menumdl path anim rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
@@ -230,33 +230,69 @@ menuitem "Bots"                                 "showmenu botedit"
 menuitem "Help..."                              "showmenu editkeys"
 
 
+// Start of "editing help" menu.
 newmenu editkeys
 
-menuitem "toggle edit mode (key E)"                         "edittoggle"
-menuitem "undo last edit action (key U)"                    "undo"
-menuitem "copy selection (key C)"                           "copy"
-menuitem "paste selection (red vertex = upper left, key V)" "paste"
-menuitem "repeat last texture replace"                      "replace"
-menuitem "delete closest entity (key X)"                    "delent"
-menuitem "fullbright view (key f7)"                         "fullbright 1" 
-menuitem "recalc light (key f8)"                            "recalc"  
-menuitem "toggle show geometric mipmaps (key f5)"           "showmip"
-menuitem "toggle occlusion culling (key f6)                 "toggleocull"
-menuitem "more..."                                          "showmenu more"
+menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker to toggle edit mode" ]
+menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker to undo" ]
+menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker to copy" ]
+menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
+menuitem "Repeat last texture replace"						"replace"
+menuitem "Delete closest light, mapmodel or other entity	(Key: B)"	"delent"
+menuitem "Fullbright view"							"fullbright 1" 
+menuitem "Recalculate light"							"recalc"  
+menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
+menuitem "Toggle: Occlusion culling				(Key: F6)"	"toggleocull"
+menuitem """"
+menuitem "Show more..."								"showmenu more"
 
 
 newmenu more
 
-menuitem "insert/home/pgup/keyp7 browse through floor/wall/ceiling/" ""
-menuitem "      upper textures on your current selection,"           ""
-menuitem "      delete/end/pgup/keyp4 browse backwards"              ""
-menuitem "[ and ] move the currently selected floor up and down"     ""
-menuitem "      O and P do the same for the ceiling"                 ""
-menuitem "F makes the current selection SOLID, G makes it SPACE"     ""
-menuitem "K makes something a corner (slant)"                        ""
-menuitem ", and . equalize the floor/ceiling ceiling level"          ""
-menuitem "H makes the floor a heightfield, I the ceiling"            ""
-menuitem "8/9 change the offset of a vertex in a heightfield"        ""
+menuitem "Browse through floor textures				(Keys: Insert/Delete)"			[ showmenu "Browse floor textures" ]
+menuitem "Browse through wall textures					(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
+menuitem "Browse through ceiling textures				(Keys: Pageup/Pagedown)"	[ showmenu "Browse ceiling textures" ]
+menuitem "Browse through upper wall textures			(Keys: Keypad7/Keypad4)"		[ showmenu "Browse upper wall textures" ]
+menuitem "Move floor geometery up					(Key: [ )"			[ editheight 0 -1; echo "Pressing the left-bracket would be quicker." ]
+menuitem "Move floor geometery down					(Key: ] )"			[ editheight 0 1; echo "Pressing right-bracket would be quicker." ]
+menuitem "Move ceiling geometery up					(Key: O)"			[ editheight 2 -1; echo "Pressing O would be quicker." ]
+menuitem "Move ceiling geometery down				(Key: P)"				[ editheight 2 1; echo "Pressing P would be quicker." ]
+menuitem "Make selected geometery SOLID				(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
+menuitem "Make selected geometery SPACE				(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
+menuitem "Make selected geometery a corner				(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
+menuitem "Equalize the floor level						(Key: , )"		[ equalize 0; echo "Pressing , would be quicker." ]
+menuitem "Equalize the ceiling level					(Key: . )"			[ equalize 2; echo "Pressing . would be quicker." ]
+menuitem "Make the floor a heightfield					(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
+menuitem "Make the ceiling a heightfield					(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
+menuitem "Manipulate the corners of a cube (upward)		(Key: 8 )"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
+menuitem "Manipulate the corners of a cube (downward)		(Key: 9 )"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
+
+
+newmenu "Browse floor textures"
+
+menuitem "Browse floor textures forwards	(Key Insert)"		[ edittex 0 1; echo "Pressing 'Ins' would be quicker." ]		
+menuitem "Browse floor textures backwards	(Key Delete)"		[ edittex 0 -1; echo "Pressing 'Del' would be quicker." ]
+
+
+newmenu "Browse wall textures"
+
+menuitem "Browse wall textures forwards		(Key Home)"	[ edittex 1 1; echo "Pressing 'Home' would be quicker." ]		
+menuitem "Browse wall textures backwards	(Key End)"		[ edittex 1 -1; echo "Pressing 'End' would be quicker." ]
+
+
+newmenu "Browse ceiling textures"
+
+menuitem "Browse ceiling textures forwards	(Key Pageup)"		[ edittex 2 1; echo "Pressing 'PgUp' would be quicker." ]		
+menuitem "Browse ceiling textures backwards	(Key Pagedown)"		[ edittex 2 -1; echo "Pressing 'PgDn' would be quicker." ]
+
+
+newmenu "Browse upper wall textures"
+
+menuitem "Browse upper wall textures forwards	(Key Keypad7)"		[ edittex 3 1; echo "Pressing '7' on the keypad would be quicker." ]
+menuitem "Browse upper wall textures backwards	(Key Keypad4)"		[ edittex 3 -1; echo "Pressing '4' on the keypad would be quicker." ]		
+
+
+// End of "editing help" menu.
 
 
 newmenu mapmodels
@@ -395,10 +431,10 @@ menuitem "[ arches make ceiling heighfield, slopes floor ]"
 
 newmenu mapop
 
-menuitem "Newmap 128x128 cubes (recommended)" "newmap 7"
-menuitem "Newmap 256x256 cubes"               "newmap 8"
+menuitem "Newmap (128x128 cubes, recommended)" "newmap 7"
+menuitem "Newmap (256x256 cubes)"               "newmap 8"
 menuitem "Increase mapsize (2x)"              "mapenlarge"
-menuitem "Set map title/author"               "saycommand /mapmsg "
+menuitem "Create a map message"               "saycommand /mapmsg "
 
 newmenu "weapons"
 
@@ -619,11 +655,12 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 
 newmenu help
 
-menuitem "AssaultCube reference"	 "showmenu reference"
-menuitem "search commands"           "saycommand /docfind yourSearchString"
-menuitem "default keys"				 "showmenu controls"
+menuitem "AssaultCube reference"	"showmenu reference"
+menuitem "search commands"		"saycommand /docfind "
+menuitem "default keys"			"showmenu controls"
+menuitem "Map editing help"		"showmenu editkeys"
 menuitem "" ""
-menuitem "..for further information see the README" "echo 2The readme can be found in the base AssaultCube directory."
+menuitem "...for further information/help see the README" "echo 2The readme can be found in the base AssaultCube directory."
 
 
 newmenu credits
@@ -667,13 +704,13 @@ menuitem "Delete End of 2-way path"		"delpath2way2"
 menuitem "Make waypoints visible"		"wpvisible 1"
 menuitem "Make waypoints invisible"		"wpvisible 0"
 menuitem "Flood map with waypoints"		"wpflood"
-menuitem "Delete all waypoints"			[ showmenu "Are you sure?" ]
-menuitem "Save bot waypoints"			"wpsave"
+menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
+menuitem "Save bot waypoints"			[ wpsave; sleep 3 [ echo "Waypoints saved." ] ]
 menuitem "Select waypoint by clicking"		"xhairwpsel 1"
 menuitem "Select waypoint by the nearest one"	"xhairwpsel 0"
 
 
-newmenu "Are you sure?"
+newmenu "Delete all waypoints?"
 
 menuitem "Yes, delete all waypoints"		"wpclear"
 menuitem "No. Leave my waypoints alone!"	"showmenu botedit"
