--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -5,7 +5,7 @@ keymap -3 MOUSE2 "jump"
 keymap -2 MOUSE3 "weapon"
 keymap -4 MOUSE4 ""
 keymap -5 MOUSE5 ""
-keymap 8 BACKSPACE "dropflag"
+keymap 8 BACKSPACE [ if $editing [ delent ] [ dropflag ] ]
 keymap 9 TAB "showscores"
 keymap 12 CLEAR ""
 keymap 13 RETURN ""
