--- a/ac/config/lights.cfg
+++ b/ac/config/lights.cfg
@@ -7,7 +7,7 @@
 
 newmenu "lighting"
 
-menuitem "Temporarily flood map with light" "fullbright 1"
+menuitem "Temporarily flood map with light..." "fullbright 1"
 menuitem """"
 menuitem "White light"	[ showmenu "White light radius" ]
 menuitem "Red light"	[ showmenu "Red light radius" ]
