--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -238,7 +238,7 @@ menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U woul
 menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker to copy" ]
 menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
 menuitem "Repeat last texture replace"						"replace"
-menuitem "Delete closest light, mapmodel or other entity	(Key: B)"	"delent"
+menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	"delent"
 menuitem "Fullbright view"							"fullbright 1" 
 menuitem "Recalculate light"							"recalc"  
 menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
@@ -311,14 +311,14 @@ menuitem "other"      "showmenu other"
 newmenu misc
 
 menuitem "Nothing/Clip (4x4x2)"       "newent mapmodel 0"
-menuitem "Bridge(8x8)"        	"newent mapmodel 1"
+menuitem "Bridge(8x8)"        	"saycommand /newent mapmodel 1 "
 
 
 newmenu ladders
 
 menuitem "Ladder(7)"             "newent mapmodel 2"             
 menuitem "Ladder(8)"             "newent mapmodel 3"
-menuitem "Ladder(10)"           "newent mapmodel 4"
+menuitem "Ladder(10)"            "newent mapmodel 4"
 menuitem "Ladder(11)"            "newent mapmodel 5"
 menuitem "Ladder(15)"            "newent mapmodel 6" 
 
@@ -351,15 +351,15 @@ newmenu interior
 
 menuitem "Chair" 	        "newent mapmodel 27"
 menuitem "Laptop"     		"newent mapmodel 28"
-menuitem "Picture1"      	"newent mapmodel 29"
+menuitem "Picture1"      	"saycommand /newent mapmodel 29 "
 menuitem "Locker"     		"newent mapmodel 30"
 
 
 newmenu lights
 
-menuitem "Strahler"    		"newent mapmodel 31"
-menuitem "Light1"    		"newent mapmodel 32"
-menuitem "Bulb"    		"newent mapmodel 33"
+menuitem "Strahler"    		"saycommand /newent mapmodel 31"
+menuitem "Fluorescent lamp" 	"saycommand /newent mapmodel 32"
+menuitem "LightBulb"   		"saycommand /newent mapmodel 33"
 
 newmenu industrial
 
