--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -17,7 +17,7 @@ bind A left
 bind S backward
 bind D right
 
-bind B [ if $editing [ delent ] [ showmenu weapons ] ]
+bind B "showmenu weapons"
 
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
