--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -227,7 +227,7 @@ menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
 menuitem "Bots"                                 "showmenu botedit"
-menuitem "Help..."                              "showmenu editkeys"
+menuitem "Help..."                              [ showmenu "Creating bot waypoints" ]
 
 
 // Start of "editing help" menu.
@@ -656,8 +656,8 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 newmenu help
 
 menuitem "AssaultCube reference"	"showmenu reference"
-menuitem "search commands"		"saycommand /docfind "
-menuitem "default keys"			"showmenu controls"
+menuitem "Search commands"		"saycommand /docfind "
+menuitem "Default keys"			"showmenu controls"
 menuitem "Map editing help"		"showmenu editkeys"
 menuitem "" ""
 menuitem "...for further information/help see the README" "echo 2The readme can be found in the base AssaultCube directory."
@@ -685,27 +685,53 @@ menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr," ""
 menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)" ""
 
 
-newmenu botedit
+newmenu "Creating bot waypoints"
+
+menuitem "Waypoints..."		[ showmenu "Waypoints" ]
+menuitem "Paths..."		[ showmenu "Paths" ]
+menuitem "Deletion..."		[ showmenu "Deletion" ]
+menuitem "Other operations..."	[ showmenu "Other bot operations" ]
+
+
+newmenu Waypoints
 
 menuitem "Add waypoint"				"addwp 0"
 menuitem "Add auto-connecting waypoint"		"addwp 1"
-menuitem "Delete Waypoint"			"delwp"
-menuitem "Set waypoint as jumpable"		"setjumpwp"
-menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
-menuitem "Set waypoint direction (yaw)"		"setwpyaw"
+
+
+newmenu Paths
+
 menuitem "Start of 1-way path"			"addpath1way1"
 menuitem "End of 1-way path"			"addpath1way2"
 menuitem "Start of 2-way path"			"addpath2way1"
 menuitem "End of 2-way path"			"addpath2way2"
+
+
+newmenu Deletion
+
+menuitem "Delete Waypoint"			"delwp"
+menuitem """"
+menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
+menuitem """"
 menuitem "Delete Start of 1-way path"		"delpath1way1" 
 menuitem "Delete End of 1-way path"		"delpath1way2" 
 menuitem "Delete Start of 2-way path"		"delpath2way1"
 menuitem "Delete End of 2-way path"		"delpath2way2"
+
+
+newmenu "Other bot operations"
+
+menuitem "Flood map with waypoints"		"wpflood"
+menuitem """"
 menuitem "Make waypoints visible"		"wpvisible 1"
 menuitem "Make waypoints invisible"		"wpvisible 0"
-menuitem "Flood map with waypoints"		"wpflood"
-menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
+menuitem """"
+menuitem "Set waypoint as jumpable"		"setjumpwp"
+menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
+menuitem "Set waypoint direction (yaw)"		"setwpyaw"
+menuitem """"
 menuitem "Save bot waypoints"			[ wpsave; sleep 3 [ echo "Waypoints saved." ] ]
+menuitem """"
 menuitem "Select waypoint by clicking"		"xhairwpsel 1"
 menuitem "Select waypoint by the nearest one"	"xhairwpsel 0"
 
