--- a/ac/config/lights.cfg
+++ b/ac/config/lights.cfg
@@ -7,8 +7,6 @@
 
 newmenu "lighting"
 
-menuitem "Temporarily flood map with light..." "fullbright 1"
-menuitem """"
 menuitem "White light"	[ showmenu "White light radius" ]
 menuitem "Red light"	[ showmenu "Red light radius" ]
 menuitem "Yellow light" [ showmenu "Yellow light radius" ]
@@ -17,7 +15,14 @@ menuitem "Teal light"	[ showmenu "Teal light radius" ]
 menuitem "Blue light"	[ showmenu "Blue light radius" ]
 menuitem "Pink light"	[ showmenu "Pink light radius" ]
 menuitem """"
+menuitem "Fullbright on/off"	"showmenu Fullbright"
 menuitem "Custom light"	"saycommand /newent light "
+
+
+newmenu Fullbright
+
+menuitem "Fullbright ON"	"fullbright 1"
+menuitem "Fullbright OFF"	"recalc"
 
 
 // Light radiuses
