--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -21,7 +21,7 @@ alias genmapitems [
     alias n (listlen $arg1)
     loop i $n [
         alias mapname (at $arg1 $i)
-        menuitem (concat map $mapname)
+        menuitem (concat Map: $mapname)
         alias next (+ $i 1)
         if (= $next $n) [ alias next 0 ] []
         alias nextmap (at $arg1 $next)
@@ -31,16 +31,18 @@ alias genmapitems [
 
 newmenu maps
 
-genmapitems "ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
-menuitem "show all.." [showmenu "all maps"]
+genmapitems	"ac_complex ac_mines ac_depot ac_desert ac_desert2 ac_snow ac_power ac_elevation ac_toxic"
+menuitem	""""
+menuitem	"Show all maps..." [ showmenu "all maps" ]
 
 newmenu "all maps"
 menudirlist "packages/maps" "cgz" "map $arg1"
 
 newmenu maps_ctf 
 
-genmapitems "ac_mines ac_depot ac_power ac_elevation ac_toxic"
-menuitem "show all.." [showmenu "all maps"]
+genmapitems "ac_mines ac_depot ac_power ac_elevation"
+menuitem """"
+menuitem "Show all maps.." [showmenu "all maps"]
 
 newmenu setup
 
@@ -189,7 +191,7 @@ newmenu botmaps
 alias genbotmaps [
 	loop i (listlen $arg1) [
 		alias mapname (at $arg1 $i)
-		alias menutext (concat map $mapname)
+		alias menutext (concat Map: $mapname)
 		menuitem $menutext (concat "alias tmp_botmap" $mapname "; startbotmap")
 	]
 ]
@@ -226,28 +228,28 @@ menuitem "Entities"			        "showmenu entities"
 menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
-menuitem "Bots"                                 "showmenu botedit"
-menuitem "Help..."                              [ showmenu "Creating bot waypoints" ]
+menuitem "Bots..."                              [ showmenu "Creating bot waypoints" ]
+menuitem "Help..."                              [ showmenu "Map editing help" ]
 
 
 // Start of "editing help" menu.
-newmenu editkeys
+newmenu "Map editing help"
 
-menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker to toggle edit mode" ]
-menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker to undo" ]
-menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker to copy" ]
+menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker." ]
+menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker." ]
+menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker." ]
 menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
 menuitem "Repeat last texture replace"						"replace"
-menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	"delent"
+menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	[ delent; echo "Pressing 'backspace' would be quicker." ]
 menuitem "Fullbright view"							"fullbright 1" 
 menuitem "Recalculate light"							"recalc"  
 menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
 menuitem "Toggle: Occlusion culling				(Key: F6)"	"toggleocull"
 menuitem """"
-menuitem "Show more..."								"showmenu more"
+menuitem "Show more..."								[ showmenu "Map editing help (Page 2)" ]
 
 
-newmenu more
+newmenu "Map editing help (Page 2)"
 
 menuitem "Browse through floor textures				(Keys: Insert/Delete)"			[ showmenu "Browse floor textures" ]
 menuitem "Browse through wall textures					(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
@@ -260,12 +262,14 @@ menuitem "Move ceiling geometery down				(Key: P)"				[ editheight 2 1; echo "Pr
 menuitem "Make selected geometery SOLID				(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
 menuitem "Make selected geometery SPACE				(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
 menuitem "Make selected geometery a corner				(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
-menuitem "Equalize the floor level						(Key: , )"		[ equalize 0; echo "Pressing , would be quicker." ]
-menuitem "Equalize the ceiling level					(Key: . )"			[ equalize 2; echo "Pressing . would be quicker." ]
+menuitem "Equalize the floor level						(Key: ,)"		[ equalize 0; echo "Pressing , would be quicker." ]
+menuitem "Equalize the ceiling level					(Key: .)"			[ equalize 2; echo "Pressing . would be quicker." ]
 menuitem "Make the floor a heightfield					(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
 menuitem "Make the ceiling a heightfield					(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
-menuitem "Manipulate the corners of a cube (upward)		(Key: 8 )"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
-menuitem "Manipulate the corners of a cube (downward)		(Key: 9 )"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
+menuitem "Manipulate the corners of a cube (upward)		(Key: 8)"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
+menuitem "Manipulate the corners of a cube (downward)		(Key: 9)"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
+menuitem """"
+menuitem "See the reference for more editing commands..."						"showmenu Editing"
 
 
 newmenu "Browse floor textures"
@@ -658,7 +662,7 @@ newmenu help
 menuitem "AssaultCube reference"	"showmenu reference"
 menuitem "Search commands"		"saycommand /docfind "
 menuitem "Default keys"			"showmenu controls"
-menuitem "Map editing help"		"showmenu editkeys"
+menuitem "Map editing help"		[ showmenu "Map editing help" ]
 menuitem "" ""
 menuitem "...for further information/help see the README" "echo 2The readme can be found in the base AssaultCube directory."
 
@@ -687,10 +691,13 @@ menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)" ""
 
 newmenu "Creating bot waypoints"
 
-menuitem "Waypoints..."		[ showmenu "Waypoints" ]
-menuitem "Paths..."		[ showmenu "Paths" ]
-menuitem "Deletion..."		[ showmenu "Deletion" ]
-menuitem "Other operations..."	[ showmenu "Other bot operations" ]
+menuitem "Waypoints..."			[ showmenu "Waypoints" ]
+menuitem "Paths..."			[ showmenu "Paths" ]
+menuitem "Deletion..."			[ showmenu "Deletion" ]
+menuitem "Other operations..."		[ showmenu "Other bot operations" ]
+menuitem """"
+menuitem "Flood map with waypoints"	"wpflood"
+menuitem "Save bot waypoints"		[ wpsave; echo "Waypoints saved in ...bot\waypoints" ]
 
 
 newmenu Waypoints
@@ -709,7 +716,7 @@ menuitem "End of 2-way path"			"addpath2way2"
 
 newmenu Deletion
 
-menuitem "Delete Waypoint"			"delwp"
+menuitem "Delete waypoint"			"delwp"
 menuitem """"
 menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
 menuitem """"
@@ -721,8 +728,6 @@ menuitem "Delete End of 2-way path"		"delpath2way2"
 
 newmenu "Other bot operations"
 
-menuitem "Flood map with waypoints"		"wpflood"
-menuitem """"
 menuitem "Make waypoints visible"		"wpvisible 1"
 menuitem "Make waypoints invisible"		"wpvisible 0"
 menuitem """"
@@ -730,10 +735,8 @@ menuitem "Set waypoint as jumpable"		"setjumpwp"
 menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
 menuitem "Set waypoint direction (yaw)"		"setwpyaw"
 menuitem """"
-menuitem "Save bot waypoints"			[ wpsave; sleep 3 [ echo "Waypoints saved." ] ]
-menuitem """"
-menuitem "Select waypoint by clicking"		"xhairwpsel 1"
-menuitem "Select waypoint by the nearest one"	"xhairwpsel 0"
+menuitem "Select waypoints by clicking"		"xhairwpsel 1"
+menuitem "Select waypoints by the nearest one"	"xhairwpsel 0"
 
 
 newmenu "Delete all waypoints?"
