--- a/ac/packages/maps/ac_mines.cfg
+++ b/ac/packages/maps/ac_mines.cfg
@@ -1,10 +1,12 @@
 fog 1024
 mapmodelreset // start @ zero
 
-mapmodel 2 10 0 0 "nothing"
-mapmodel 1 10 0 0 "nothing" 
+mapmodel 0 0 0 0 "nothing"		// Change to "2 10 0 0" to clip the mountains in RVSF.
+					// This comment is for dev's only, please ignore it.
+mapmodel 0 0 0 0 "nothing"		// Change to "1 10 0 0" to clip the mountains in RVSF.
+					// This comment is for dev's only, please ignore it.
 mapmodel 0 0 0 0 "nothing"
-mapmodel 1  2 0 0 "aard"    //3
+mapmodel 1 1 0 0 "aard"    //3
 mapmodel 0 10 0 0 "ladder_10x"     //4
 mapmodel 1  3 0 0 "barrel"         //5
 mapmodel 1  2 0 0 "barrel2"        //6
