--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -20,12 +20,12 @@ menuitem "Quit"				"quit"
 alias genmapitems [
     alias n (listlen $arg1)
     loop i $n [
-        alias mapname (at $arg1 $i)
-        menuitem (concat Map: $mapname)
+        alias listmapname (at $arg1 $i)
+        menuitem (concat Map: $listmapname)
         alias next (+ $i 1)
         if (= $next $n) [ alias next 0 ] []
         alias nextmap (at $arg1 $next)
-        alias (concatword nextmap_ $mapname) $nextmap
+        alias (concatword nextmap_ $listmapname) $nextmap
     ]
 ]
 
@@ -190,9 +190,9 @@ newmenu botmaps
 
 alias genbotmaps [
 	loop i (listlen $arg1) [
-		alias mapname (at $arg1 $i)
-		alias menutext (concat Map: $mapname)
-		menuitem $menutext (concat "alias tmp_botmap" $mapname "; startbotmap")
+		alias listmapname (at $arg1 $i)
+		alias menutext (concat Map: $listmapname)
+		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
 	]
 ]
 
