--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -1,3 +1,223 @@
+newmenu editing
+
+menuitem "Mapmodels..."				"showmenu mapmodels"
+menuitem "Lighting..."				"showmenu lighting"
+menuitem "Entities"			        "showmenu entities"
+menuitem "Pickups"                              "showmenu pickups"
+menuitem "Arches and slopes.."                  "showmenu arches"
+menuitem "Map operations.."                     "showmenu mapop"
+menuitem "Bots..."                              [ showmenu "Creating bot waypoints" ]
+menuitem "Help..."                              [ showmenu "Map editing help" ]
+
+
+// Start of "editing help" menu.
+newmenu "Map editing help"
+
+menuitem "Toggle: Edit mode					(Key: E)"	[ edittoggle; echo "Pressing E would be quicker." ]
+menuitem "Undo last cube manipulation				(Key: U)"	[ undo; echo "Pressing U would be quicker." ]
+menuitem "Copy selected cubes					(Key: C)"	[ copy; echo "Pressing C would be quicker." ]
+menuitem "Paste selected cubes					(Key: V)"	[ paste; echo "Selection has been pasted from the upper corner of the red dot. Pressing V would be quicker." ]
+menuitem "Repeat last texture replace"						"replace"
+menuitem "Delete closest light, mapmodel or other entity	(Key: Backspace)"	[ delent; echo "Pressing 'backspace' would be quicker." ]
+menuitem "Fullbright view"							"fullbright 1" 
+menuitem "Recalculate light"							"recalc"  
+menuitem "Toggle: Show geometric mipmaps			(Key: F5)"	"showmip"
+menuitem "Toggle: Occlusion culling				(Key: F6)"	"toggleocull"
+menuitem """"
+menuitem "Show more..."								[ showmenu "Map editing help (Page 2)" ]
+
+
+newmenu "Map editing help (Page 2)"
+
+menuitem "Browse through floor textures				(Keys: Insert/Delete)"			[ showmenu "Browse floor textures" ]
+menuitem "Browse through wall textures					(Keys: Home/End)"		[ showmenu "Browse wall textures" ]
+menuitem "Browse through ceiling textures				(Keys: Pageup/Pagedown)"	[ showmenu "Browse ceiling textures" ]
+menuitem "Browse through upper wall textures			(Keys: Keypad7/Keypad4)"		[ showmenu "Browse upper wall textures" ]
+menuitem "Move floor geometery up					(Key: [ )"			[ editheight 0 -1; echo "Pressing the left-bracket would be quicker." ]
+menuitem "Move floor geometery down					(Key: ] )"			[ editheight 0 1; echo "Pressing right-bracket would be quicker." ]
+menuitem "Move ceiling geometery up					(Key: O)"			[ editheight 2 -1; echo "Pressing O would be quicker." ]
+menuitem "Move ceiling geometery down				(Key: P)"				[ editheight 2 1; echo "Pressing P would be quicker." ]
+menuitem "Make selected geometery SOLID				(Key: F)"				[ solid 1; echo "Pressing F would be quicker." ]
+menuitem "Make selected geometery SPACE				(Key: G)"				[ solid 0; echo "Pressing G would be quicker." ]
+menuitem "Make selected geometery a corner				(Key: K)"			[ corner; echo "Pressing K would be quicker." ]
+menuitem "Equalize the floor level						(Key: ,)"		[ equalize 0; echo "Pressing , would be quicker." ]
+menuitem "Equalize the ceiling level					(Key: .)"			[ equalize 2; echo "Pressing . would be quicker." ]
+menuitem "Make the floor a heightfield					(Key: H)"			[ heightfield 0; echo "Pressing H would be quicker." ]
+menuitem "Make the ceiling a heightfield					(Key: I)"		[ heightfield 2; echo "Pressing I would be quicker." ]
+menuitem "Manipulate the corners of a cube (upward)		(Key: 8)"				[ vdelta -1; echo "Pressing 8 would be quicker." ]
+menuitem "Manipulate the corners of a cube (downward)		(Key: 9)"				[ vdelta 1; echo "Pressing 9 would be quicker." ]
+menuitem """"
+menuitem "See the reference for more editing commands..."						"showmenu Editing"
+
+
+newmenu "Browse floor textures"
+
+menuitem "Browse floor textures forwards	(Key Insert)"		[ edittex 0 1; echo "Pressing 'Ins' would be quicker." ]		
+menuitem "Browse floor textures backwards	(Key Delete)"		[ edittex 0 -1; echo "Pressing 'Del' would be quicker." ]
+
+
+newmenu "Browse wall textures"
+
+menuitem "Browse wall textures forwards		(Key Home)"	[ edittex 1 1; echo "Pressing 'Home' would be quicker." ]		
+menuitem "Browse wall textures backwards	(Key End)"		[ edittex 1 -1; echo "Pressing 'End' would be quicker." ]
+
+
+newmenu "Browse ceiling textures"
+
+menuitem "Browse ceiling textures forwards	(Key Pageup)"		[ edittex 2 1; echo "Pressing 'PgUp' would be quicker." ]		
+menuitem "Browse ceiling textures backwards	(Key Pagedown)"		[ edittex 2 -1; echo "Pressing 'PgDn' would be quicker." ]
+
+
+newmenu "Browse upper wall textures"
+
+menuitem "Browse upper wall textures forwards	(Key Keypad7)"		[ edittex 3 1; echo "Pressing '7' on the keypad would be quicker." ]
+menuitem "Browse upper wall textures backwards	(Key Keypad4)"		[ edittex 3 -1; echo "Pressing '4' on the keypad would be quicker." ]		
+
+
+// End of "editing help" menu.
+
+
+newmenu mapmodels
+
+menuitem "misc"       "showmenu misc"
+menuitem "ladders"    "showmenu ladders" 
+menuitem "street"     "showmenu street"
+menuitem "plants"     "showmenu plants"
+menuitem "interior"   "showmenu interior"
+menuitem "lights"     "showmenu lights" 
+menuitem "industrial" "showmenu industrial"
+menuitem "signs"      "showmenu signs"
+menuitem "other"      "showmenu other"
+
+
+newmenu misc
+
+menuitem "Nothing/Clip (4x4x2)"       "newent mapmodel 0"
+menuitem "Bridge(8x8)"        	"saycommand /newent mapmodel 1 "
+
+
+newmenu ladders
+
+menuitem "Ladder(7)"             "newent mapmodel 2"             
+menuitem "Ladder(8)"             "newent mapmodel 3"
+menuitem "Ladder(10)"            "newent mapmodel 4"
+menuitem "Ladder(11)"            "newent mapmodel 5"
+menuitem "Ladder(15)"            "newent mapmodel 6" 
+
+
+newmenu street
+
+menuitem "Streetlight"    	"newent mapmodel 7"
+menuitem "Park Bench"        	"newent mapmodel 9"
+menuitem "Dumpster"    		"newent mapmodel 10"
+menuitem "Roadblock"     	"newent mapmodel 11"
+menuitem "Roadblock2"           "newent mapmodel 12"
+menuitem "Fence"     		"newent mapmodel 13"
+menuitem "Fencepost"     	"newent mapmodel 14"
+menuitem "Fencegate"            "newent mapmodel 15" 
+menuitem "Fencedoor"            "newent mapmodel 16"
+
+newmenu plants
+
+menuitem "Grass1"     		"newent mapmodel 17"
+menuitem "Grass1_dry"           "newent mapmodel 18"
+menuitem "Grass1_snow"          "newent mapmodel 19"
+menuitem "Grass2"     		"newent mapmodel 20"
+menuitem "Grass2_dry"           "newent mapmodel 21"
+menuitem "Grass2_snow"          "newent mapmodel 22"
+menuitem "Plant1"     		"newent mapmodel 23"
+menuitem "Plant1_dry"           "newent mapmodel 24"
+menuitem "Plant1_snow"          "newent mapmodel 25"
+
+newmenu interior
+
+menuitem "Chair" 	        "newent mapmodel 27"
+menuitem "Laptop"     		"newent mapmodel 28"
+menuitem "Picture1"      	"saycommand /newent mapmodel 29 "
+menuitem "Locker"     		"newent mapmodel 30"
+
+
+newmenu lights
+
+menuitem "Strahler"    		"saycommand /newent mapmodel 31"
+menuitem "Fluorescent lamp" 	"saycommand /newent mapmodel 32"
+menuitem "LightBulb"   		"saycommand /newent mapmodel 33"
+
+newmenu industrial
+
+menuitem "Barrel"          	"newent mapmodel 34"
+menuitem "Knocked Over Barrel"  "newent mapmodel 35"
+menuitem "Electric meter"	"newent mapmodel 36"
+menuitem "Pallette"             "newent mapmodel 37"
+menuitem "Gastank"   		"newent mapmodel 38"
+menuitem "Grate (horizontal)"   "newent mapmodel 39"
+menuitem "Grate (vertical)"     "newent mapmodel 40"
+menuitem "Wrench"     		"newent mapmodel 41"
+menuitem "Bolt"     		"newent mapmodel 42"
+menuitem "Hook"     		"newent mapmodel 52"
+
+newmenu signs
+
+menuitem "Flammable Sign"       "newent mapmodel 43"
+menuitem "Speed Limit Sign"     "newent mapmodel 44"
+menuitem "Maintenance Sign"     "newent mapmodel 45"
+menuitem "Caution Sign"         "newent mapmodel 46"
+menuitem "Biohazard Sign"       "newent mapmodel 47"
+
+newmenu other
+
+menuitem "Cigarette"     	"newent mapmodel 48"
+menuitem "Can" 			"newent mapmodel 49"
+menuitem "Fallen Can"     	"newent mapmodel 50"
+menuitem "Broken Wood"     	"newent mapmodel 51"
+menuitem "Coffee"               "newent mapmodel 53"
+menuitem "Flyer"                "newent mapmodel 54"
+menuitem "Tree Flyer"     	"newent mapmodel 26"
+menuitem "Wanted Poster"        "newent mapmodel 55"
+
+newmenu entities
+
+menuitem "RVSF Spawn point"	"newent playerstart 1"
+menuitem "CLA Spawn point"	"newent playerstart 0"
+menuitem "FFA Spawn point"	"newent playerstart 100"
+menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
+menuitem "CLA CTF Flag"		"newent ctf-flag 0"
+menuitem "Ladder entity"	"saycommand /newent ladder "
+
+newmenu pickups
+
+menuitem "Health"                "newent health"
+menuitem "Pistol Ammo"           "newent clips"
+menuitem "Box of Ammo"           "newent ammobox"
+menuitem "Kevlar Vest"           "newent armour"
+menuitem "Akimbo"                "newent akimbo"
+
+newmenu arches
+
+menuitem "normal arch"                        "heightfield 2; arch 0"
+menuitem "arch with sideways curve (delta 1)" "heightfield 2; arch 1"
+menuitem "arch with sideways curve (delta 2)" "heightfield 2; arch 2"
+menuitem "arch with sideways curve (delta 3)" "heightfield 2; arch 3"
+menuitem "arch with sideways curve (delta 4)" "heightfield 2; arch 4"
+menuitem "slope increase 2 left-right"        "heightfield 0; slope 2 0"
+menuitem "slope decrease 2 left-right"        "heightfield 0; slope -2 0"
+menuitem "slope increase 2 top-bottom"        "heightfield 0; slope 0 2"
+menuitem "slope decrease 2 top-bottom"        "heightfield 0; slope 0 -2"
+menuitem "slope increase 1 left-right"        "heightfield 0; slope 1 0"
+menuitem "slope decrease 1 left-right"        "heightfield 0; slope -1 0"
+menuitem "slope increase 1 top-bottom"        "heightfield 0; slope 0 1"
+menuitem "slope decrease 1 top-bottom"        "heightfield 0; slope 0 -1"
+menuitem "fix heightfield"                    "slope 0 0"
+menuitem "[ arches make ceiling heighfield, slopes floor ]"
+
+
+newmenu mapop
+
+menuitem "Newmap (128x128 cubes, recommended)" "newmap 7"
+menuitem "Newmap (256x256 cubes)"               "newmap 8"
+menuitem "Increase mapsize (2x)"              "mapenlarge"
+menuitem "Create a map message"               "saycommand /mapmsg "
+
 // Prefabricated lights menu
 // Add other prefab lights to these menus if needed.
 
