--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -68,7 +68,7 @@ newmenu botmaps
 alias genbotmaps [
 	loop i (listlen $arg1) [
 		alias listmapname (at $arg1 $i)
-		alias menutext (concat Map: $listmapname)
+		alias menutext $listmapname (concat map $listmapname)
 		menuitem $menutext (concat "alias tmp_botmap" $listmapname "; startbotmap")
 	]
 ]
