fixed skin menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1619 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,3 +1,52 @@
+newmenu setup
+
+menuitemtextinput "nickname: " "result $curname" "name $arg1"
+menuitemslider "team: " 0 1 "(curteam)" 1 "CLA RVSF" [team (at [CLA RVSF] $arg1)]
+menuitem "select skin.."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "select weapon.."        "showmenu weapons"
+menuitem "select crosshair.."	  "showmenu crosshairs"
+
+
+alias gencrosshairs [
+	loop i (listlen $arg1) [
+		alias label (at $arg1 $i)
+		menuitem $label (concat loadcrosshair $label)
+	]
+]
+
+newmenu crosshairs
+gencrosshairs "default.png cube.png dot.png dot_wide.png o.png o_dot.png o_x.png star.png wide.png x-dot.png"
+
+
+newmenu weapons
+
+menumdl weapons/assault/menu mapmodel 75 12
+menuitem "MTP-57 Assault Rifle"			"nextprimary 5;echo MTP-57 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu mapmodel 75 12"
+menuitem "A-ARD/10 Submachine Gun"		"nextprimary 3;echo A-ARD/10 Submachine Gun chosen" "chmenumdl weapons weapons/subgun/menu mapmodel 75 12"
+menuitem "Precision Tech AD-81 Sniper Rifle"     "nextprimary 4;echo Precision Tech AD-81 Sniper Rifle chosen" "chmenumdl weapons weapons/sniper/menu mapmodel 75 12"
+menuitem "V-19 Combat Shotgun"			"nextprimary 2;echo V-19 Combat Shotgun chosen" "chmenumdl weapons weapons/shotgun/menu mapmodel 75 12"
+
+
+newmenu CLA
+
+menumdl playermodels/CLA/01 all 50 4
+menuitem "Comandante"           "skin 0" "chmenumdl CLA playermodels/CLA/01 all 50 4"
+menuitem "Psycho"               "skin 1" "chmenumdl CLA playermodels/CLA/02 all 50 4"
+menuitem "Bomber"               "skin 2" "chmenumdl CLA playermodels/CLA/03 all 50 4"
+menuitem "Ripper"               "skin 3" "chmenumdl CLA playermodels/CLA/04 all 50 4"
+
+
+newmenu RVSF
+
+menumdl playermodels/RVSF/01 all 50 4
+menuitem "Alpha"            "skin 0" "chmenumdl RVSF playermodels/RVSF/01 all 50 4"
+menuitem "Tango"            "skin 1" "chmenumdl RVSF playermodels/RVSF/02 all 50 4"
+menuitem "Cobra"            "skin 2" "chmenumdl RVSF playermodels/RVSF/03 all 50 4"
+menuitem "Viper"            "skin 3" "chmenumdl RVSF playermodels/RVSF/04 all 50 4"
+menuitem "Swat"             "skin 4" "chmenumdl RVSF playermodels/RVSF/05 all 50 4"
+menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50 4"
+
+
 newmenu settings
 
 menuitem "quick setup.."                                            [ showmenu "quick setup" ]
