--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -45,7 +45,7 @@ registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 100 1    // S_FOOTSTEPS
-registersound "player/crouch" 100 1 // S_FOOTSTEPSCROUCH
+registersound "player/crouch" 100 // S_FOOTSTEPSCROUCH
 
 alias fade [ // 0=in, 1=out
     alias stepsize 5
