Editing help menu -> Spacing cleanup
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1626 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -52,26 +52,26 @@ menuitem "See the reference for more editing commands..."						"showmenu Editing
 
 newmenu "Browse floor textures"
 
-menuitem "Browse floor textures forwards	(Key Insert)"		[ edittex 0 1; echo "Pressing 'Ins' would be quicker." ]		
-menuitem "Browse floor textures backwards	(Key Delete)"		[ edittex 0 -1; echo "Pressing 'Del' would be quicker." ]
+menuitem "Browse floor textures forwards	(Key: Insert)"		[ edittex 0 1; echo "Pressing 'Ins' would be quicker." ]		
+menuitem "Browse floor textures backwards	(Key: Delete)"		[ edittex 0 -1; echo "Pressing 'Del' would be quicker." ]
 
 
 newmenu "Browse wall textures"
 
-menuitem "Browse wall textures forwards		(Key Home)"	[ edittex 1 1; echo "Pressing 'Home' would be quicker." ]		
-menuitem "Browse wall textures backwards	(Key End)"		[ edittex 1 -1; echo "Pressing 'End' would be quicker." ]
+menuitem "Browse wall textures forwards	(Key: Home)"	[ edittex 1 1; echo "Pressing 'Home' would be quicker." ]		
+menuitem "Browse wall textures backwards	(Key: End)"		[ edittex 1 -1; echo "Pressing 'End' would be quicker." ]
 
 
 newmenu "Browse ceiling textures"
 
-menuitem "Browse ceiling textures forwards	(Key Pageup)"		[ edittex 2 1; echo "Pressing 'PgUp' would be quicker." ]		
-menuitem "Browse ceiling textures backwards	(Key Pagedown)"		[ edittex 2 -1; echo "Pressing 'PgDn' would be quicker." ]
+menuitem "Browse ceiling textures forwards	(Key: Pageup)"		[ edittex 2 1; echo "Pressing 'PgUp' would be quicker." ]		
+menuitem "Browse ceiling textures backwards	(Key: Pagedown)"		[ edittex 2 -1; echo "Pressing 'PgDn' would be quicker." ]
 
 
 newmenu "Browse upper wall textures"
 
-menuitem "Browse upper wall textures forwards	(Key Keypad7)"		[ edittex 3 1; echo "Pressing '7' on the keypad would be quicker." ]
-menuitem "Browse upper wall textures backwards	(Key Keypad4)"		[ edittex 3 -1; echo "Pressing '4' on the keypad would be quicker." ]		
+menuitem "Browse upper wall textures forwards	(Key: Keypad7)"		[ edittex 3 1; echo "Pressing '7' on the keypad would be quicker." ]
+menuitem "Browse upper wall textures backwards	(Key: Keypad4)"		[ edittex 3 -1; echo "Pressing '4' on the keypad would be quicker." ]		
 
 
 // End of "editing help" menu.
