--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -56,52 +56,6 @@ newmenu "play demo"
 menudirlist "demos/" "dmo" "demo $arg1"
 
 
-newmenu multiplayer
-
-menuitem "Join Game"              	"showmenu server"
-menuitem "Join LAN Game"            "lanconnect"
-menuitem "Update Servers"         	"updatefrommaster;showmenu server"
-menuitem "Disconnect"             	"disconnect"
-menuitem "Vote"                   	"showmenu gamemode"
-menuitem "Chat"                     "saycommand"
-menuitem "Team Chat"                "saycommand %"
-menuitem "Server Operator"			"showmenu [server operator]"
-
-
-newmenu gamemode
-
-menuitem "Team Deathmatch"			"mode 0; showmenu maps"
-menuitem "Deathmatch"        		"mode 2; showmenu maps"
-menuitem "Team Survivor"			"mode 4; showmenu maps"
-menuitem "Survivor"					"mode 3; showmenu maps"
-menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
-menuitem "Pistol Frenzy"		    "mode 6; showmenu maps"
-menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
-menuitem "One Shot, One Kill"       "mode 10; showmenu maps"
-menuitem "Team One Shot, One Kill"  "mode 11; showmenu maps"
-
-newmenu "server operator"
-
-menuitem "Claim Master" "setmaster 1"
-menuitem "Give Up Master" "setmaster 0"
-menuitem "Claim Admin" "saycommand /setadmin 1 myPassword"
-menuitem "Give Up Admin" "setadmin 0"
-menuitem "" ""
-menuitem "Set Mastermode" "showmenu mastermode"
-menuitem "Change Mode/Map" "showmenu gamemode"
-menuitem "Force Team Change" [showmenu "force team"]
-menuitem "Kick Player" [showmenu "kick player"]
-menuitem "Ban Player" [showmenu "ban player"]
-menuitem "Remove Bans" "removebans"
-menuitem "Give Master" [showmenu "give master"]
-
-
-newmenu mastermode
-
-menuitem "Open" "mastermode 0"
-menuitem "Private" "mastermode 1"
-
-
 newmenu about
 
 menuitem "AssaultCube v0.94" ""
@@ -155,3 +109,4 @@ menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)" ""
 exec config/menus_bot.cfg
 exec config/menus_edit.cfg
 exec config/menus_settings.cfg
+exec config/menus_multiplayer.cfg
