Adding "grenades" pickup into editing menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1629 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -186,11 +186,12 @@ menuitem "Ladder entity"	"saycommand /newent ladder "
 
 newmenu pickups
 
-menuitem "Health"                "newent health"
-menuitem "Pistol Ammo"           "newent clips"
-menuitem "Box of Ammo"           "newent ammobox"
-menuitem "Kevlar Vest"           "newent armour"
-menuitem "Akimbo"                "newent akimbo"
+menuitem "Health"		"newent health"
+menuitem "Pistol Ammo"		"newent clips"
+menuitem "Box of Ammo"		"newent ammobox"
+menuitem "Kevlar Vest"		"newent armour"
+menuitem "Akimbo"		"newent akimbo"
+menuitem "Grenades"		"newent grenades"
 
 newmenu arches
 
