menu hotkeys, spect fix, recoiltest, voicecom
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1638 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -45,7 +45,7 @@ menuitem "Open" "mastermode 0"
 menuitem "Private" "mastermode 1"
 
 
-newmenu voicecom
+newmenu voicecom 1
 
 menuitem "Team Commands" [showmenu "Team Commands"]
 menuitem "Team State" [showmenu "Team State"]
@@ -55,11 +55,10 @@ menuitem "Public Talk" [showmenu "Public Talk"]
 
 alias genvcitem [
     menuitem $arg1 (concat "voicecom" $arg2 (concatword "[" $arg1 "]"))
-    echo menuitem $arg1 (concat "voicecom" $arg2 (concatword "[" $arg1 "]"))
 ]
 
 
-newmenu "Team Commands"
+newmenu "Team Commands" 1
 
 genvcitem "Come on, move!"              comeonmove
 genvcitem "Cover me!"                   coverme
@@ -70,7 +69,7 @@ genvcitem "Recover the flag!"           recovertheflag
 genvcitem "Stay together!"              staytogether
 
 
-newmenu "Team State"
+newmenu "Team State" 1
 
 genvcitem "Enemy down"                  enemydown
 genvcitem "I got one"                   igotone
@@ -80,7 +79,7 @@ genvcitem "I'm on defense"              imondefense
 genvcitem "Coming in with the flag!"    comminginwiththeflag
 
 
-newmenu "Team Talk"
+newmenu "Team Talk" 1
 
 genvcitem Yes                           yes
 genvcitem Affirmative                   affirmative
@@ -91,7 +90,7 @@ genvcitem "There's no way, Sir!"        theresnowaysir
 genvcitem "Sorry"                       sorry
 
 
-newmenu "Team Shouts"
+newmenu "Team Shouts" 1
 
 genvcitem "We did it!"                  wedidit
 genvcitem "Go get 'em boys!"            gogetemboys
@@ -99,6 +98,6 @@ genvcitem "Good job, team!"             goodjobteam
 genvcitem "I'm on your team, man!"      imonyourteamman
 
 
-newmenu "Public Talk"
+newmenu "Public Talk" 1
 
 genvcitem "Nice shot"                   niceshot
