--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -47,6 +47,32 @@ registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 100 1    // S_FOOTSTEPS
 registersound "player/crouch" 100 // S_FOOTSTEPSCROUCH
 
+registersound "voicecom/affirmative"
+registersound "voicecom/allrightsir"
+registersound "voicecom/comeonmove"
+registersound "voicecom/cominginwiththeflag"
+registersound "voicecom/coverme"
+registersound "voicecom/defendtheflag"
+registersound "voicecom/enemydown"
+registersound "voicecom/gogetemboys"
+registersound "voicecom/goodjobteam"
+registersound "voicecom/igotone"
+registersound "voicecom/imadecontact"
+registersound "voicecom/imattacking"
+registersound "voicecom/imondefense"
+registersound "voicecom/imonyourteamman"
+registersound "voicecom/negative"
+registersound "voicecom/nocando"
+registersound "voicecom/recovertheflag"
+registersound "voicecom/sorry"
+registersound "voicecom/spreadout"
+registersound "voicecom/stayhere"
+registersound "voicecom/staytogether"
+registersound "voicecom/theresnowaysir"
+registersound "voicecom/wedidit"
+registersound "voicecom/yes"
+registersound "voicecom/niceshot"
+
 alias fade [ // 0=in, 1=out
     alias stepsize 5
     alias numsteps (div $maxmusicvol $stepsize)
@@ -55,5 +81,5 @@ alias fade [ // 0=in, 1=out
         if (= $arg1 1) [ alias curvol (- $maxmusicvol $curvol) ]
         sleep (* $i 100) (concat musicvol $curvol)
     ]
-] 
+]
 
