--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -63,7 +63,7 @@ menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
-menuitem "OK" "showmenu restart" 
+menuitem "OK" "resetgl"
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
@@ -166,10 +166,6 @@ alias new_sound_quality [
         ]
     ]
 ]
-
-newmenu restart
-menuitem "You need to restart AssaultCube" "quit"
-
 
 newmenu controls
 
