--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -70,7 +70,7 @@ keymap 114 R "recalc"
 keymap 115 S "say :)"
 keymap 116 T "saycommand"
 keymap 117 U "undo"
-keymap 118 V "showmenu voicecom"
+keymap 118 V [ if $editing [ paste ] [ showmenu voicecom ] ]
 keymap 119 W ""
 keymap 120 X "delent"
 keymap 121 Y "saycommand %"
