--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -198,8 +198,8 @@ menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivty $ar
 
 newmenu video
 
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
-menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
+
+menuitem "screen resolution.." [showmenu "screen resolution"]
 
 alias fsaa_valuemap "0 2 4 8 16"
 menuitemslider "antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
@@ -216,6 +216,14 @@ menuitemcheckbox "dynamic light: " "$dynlight" [ if (= $arg1 1) [ dynlight 16 ] 
 menuitemcheckbox "dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dynshadow 40 ] [ dynshadow 0 ] ]
 menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 menuitem "fpsrange.." "showmenu fpsrange"
+
+
+newmenu "screen resolution"
+
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
+menuitem Apply resetgl
+
 
 newmenu fpsrange
 
