"Coming in with the flag" now works (Voice com -> It got broken after typo fix)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1658 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -89,7 +89,7 @@ genvcitem ["Enemy down" "I got one"]    "enemydown igotone" 1
 genvcitem "I made contact"              imadecontact        2
 genvcitem "I'm attacking"               imattacking         3
 genvcitem "I'm on defense"              imondefense         4
-genvcitem "Coming in with the flag!"    comminginwiththeflag    5
+genvcitem "Coming in with the flag!"    cominginwiththeflag    5
          
 
 newmenu "Team Talk" 1 1
