--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -63,6 +63,7 @@ menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
+menuitem "" ""
 menuitem "OK" "resetgl"
 
 alias getgfxq [
@@ -199,10 +200,14 @@ menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivty $ar
 newmenu video
 
 
-menuitem "screen resolution.." [showmenu "screen resolution"]
+menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
 
-alias fsaa_valuemap "0 2 4 8 16"
+alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+
+menuitemslider "vsync: " 0 1 "$vsync" 1 "off on" "vsync $arg1"
+
 menuitemslider "gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 alias minlod_valuemap "25 60 100 250"
@@ -217,12 +222,18 @@ menuitemcheckbox "dynamic player shadows: " "$dynshadow" [ if (= $arg1 1) [ dyns
 menuitemslider "light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 menuitem "fpsrange.." "showmenu fpsrange"
 
+menuitem "" ""
+menuitem "OK" resetgl
 
-newmenu "screen resolution"
 
-menuitemtextinput "screen width: " "$scr_w" "scr_w $arg1"
-menuitemtextinput "screen height: " "$scr_h" "scr_h $arg1"
-menuitem Apply resetgl
+newmenu sound
+
+menuitemslider "sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
+menuitemslider "music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
+menuitemcheckbox "stereo: " "$stereo" "stereo $arg1"
+menuitemslider "channels: " 0 128 "$soundchans" 4 "" "soundchans $arg1"
+menuitemslider "sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
+menuitemslider "sound buffer: " 128 4096 "$soundbufferlen" 128 "" "soundbufferlen $arg1"
 
 
 newmenu fpsrange
