Fixing of "makke/door.jpg". New linux bins. Updated cfg files for "door".
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1665 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -10,7 +10,7 @@
 mapmodelreset // start @ zero
 
 mapmodel 2 2 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
-//                                     models that can´t be clipped properly otherwise
+//                                     models that canï¿½t be clipped properly otherwise
 
 mapmodel 3 1 0 0 "comp_bridge"     //1
 mapmodel 0 7 0 0 "ladder_7x"       //2
@@ -361,7 +361,7 @@ texture 0 "./mitaman/zastrow/sub_doors512A16.jpg"
 texture 0 "./mitaman/various/sub_doors256nf_01.jpg"
 texture 0 "./mitaman/3dcafe/objects08.jpg"
 
-//------crates----------
+//------crates/boxes----------
 
 texture 0 "./craig_fortune/crates/light_weathered.jpg"
 texture 0 "./craig_fortune/crates/light.jpg"
@@ -380,3 +380,7 @@ texture 0 "./zastrow/wood_crate_12.jpg"
 texture 0 "./makke/box_2.jpg"
 texture 0 "./makke/box_4.jpg"
 texture 0 "./makke/box_3.jpg"           //241
+texture 0 "./makke/smallsteelbox.jpg
+
+//------Start of 0.94 textures----------
+
