--- a/ac/packages/maps/ac_depot_test.cfg
+++ b/ac/packages/maps/ac_depot_test.cfg
@@ -44,7 +44,7 @@ mapmodel 0 2 0 0 "roadblock01"     //29   use nothing mapmodels to clip
 mapmodel 0 2 0 0 "roadblock02"     //30
 mapmodel 0 0 0 0 "fag"             //31
 mapmodel 4 5 0 0 "nothing"         //32   alter the values in your map.cfg and use to clip 
-//                                        models that can´t be clipped properly otherwise
+//                                        models that canï¿½t be clipped properly otherwise
 mapmodel 0 0 0 0 "wood01"         //33
 mapmodel 0 0 0 0 "hook"           //34
 mapmodel 0 0 0 0 "grass01"        //35
@@ -282,7 +282,7 @@ texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/stein.jpg
 //texture 0 "./noctua/textile/canvas01.jpg"
 
-texture 0 "./ri-fix/makkedoorfix.jpg"          
+texture 0 "./makke/door.jpg"          
 
 texture 0 "./boeck/rolltor.jpg"
 texture 0 "./makke/rock.jpg" 
@@ -388,8 +388,4 @@ texture 0 "./makke/klappe3.jpg"
 // texture 0 "./3wood_crate_13.jpg"
 
 
-
-// makkE's door texture shrunk to the right size by RandumIdiot so boxes using it look better.
-// Please note: The normal one has also been shrunk as it was slightly too big.
-
-texture 0 "./ri-fix/makkedoorfix2.jpg" 
+texture 0 "./makke/smallsteelbox.jpg" 
