--- a/ac/packages/maps/ac_desert2.cfg
+++ b/ac/packages/maps/ac_desert2.cfg
@@ -300,7 +300,7 @@ texture 0 "./boeck/gully.jpg"
 texture 0 "./boeck/aircon2.jpg"
 texture 0 "./makke/aircon.jpg"
 texture 0 "./makke/aircon_sm.jpg"     //100
-texture 0 "./ri-fix/makkedoorfix.jpg" 
+texture 0 "./makke/door.jpg" 
 texture 0 "./makke/klappe.jpg"
 texture 0 "./makke/klappe2.jpg"
 texture 0 "./makke/klappe3.jpg"
@@ -363,7 +363,4 @@ texture 0 "./makke/box_3.jpg"           //241
 
 
 
-// makkE's door texture shrunk to the right size by RandumIdiot so boxes using it look better.
-// Please note: The normal one has also been shrunk as it was slightly too big.
-
-texture 0 "./ri-fix/makkedoorfix2.jpg"
+texture 0 "./makke/smallsteelbox.jpg"
