--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -202,7 +202,7 @@ texture 0 "./noctua/wall/plast01.jpg"
 texture 0 "./noctua/wall/plast03.jpg"
 texture 0 "./noctua/wall/plast04.jpg"
 texture 0 "./mitaman/various/5sqtunnelroad.jpg"
-texture 0 "./mitaman/various/027metal.jpg"
+texture 0 "./makke/smallsteelbox.jpg"
 
 //---------metal----------
 
