--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -194,7 +194,7 @@ menuitemkeyinput "map overview: "   toggleshowmap
 menuitemkeyinput "drop CTF flag: "  dropflag
 menuitem ""
 menuitemcheckbox "invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivty $arg1"
+menuitemslider "mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 
 
 newmenu video
