--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -50,7 +50,7 @@ alias quicknadethrow [
 
 loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw is default
 alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
-alias altaction_6 [ ] // grenade (none)
+alias altaction_6 [ attack ] // grenade 
 
 // NOTE: by default this zoom script just devides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
