--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -161,7 +161,7 @@ dockey [TAB] [] [autocompletes commands/variables/aliases];
 dockey [UP] [] [browse command history forwards];
 dockey [DOWN] [] [browse command history backwards];
 
-docident [schowscores] [Shows or hides the scores.];
+docident [showscores] [Shows or hides the scores.];
 dockey [TAB] [] [];
 
 docident [sendmap] [Sends the current map to the server and sends other players a message about it.];
